--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns: # example: "she/her"
   bio: "Data Science/Machine Learning"
   location: "Phoenix, Arizona"
-  employer: "STARS Advanced Radiology Services"
+  employer: "Advanced Radiology Services"
   uri: # URL
   email: "benjamin.willcox2@gmail.com"
 
