--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name: "Ben Willcox"
   pronouns: # example: "she/her"
   bio: "Data Science/Machine Learning"
-  location: "Phoenix, Arizona"
+  location: "Chicago, Illinois"
   employer: "Advanced Radiology Services"
   uri: # URL
   email: "benjamin.willcox2@gmail.com"
